--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,16 @@
 site_name: AI on the Edge Device
 
-#site_url: https://example.com/
-#site_url: https://jomjol.github.io/AI-on-the-edge-device/index.html
-site_url: https://caco3.github.io/AI-on-the-edge-device
-
-repo_url: https://github.com/jomjol/AI-on-the-edge-device
-
-#edit_uri:
+site_url: https://jomjol.github.io/AI-on-the-edge-device-docs/
+repo_url: https://github.com/jomjol/AI-on-the-edge-device-docs
+edit_uri: https://github.com/jomjol/AI-on-the-edge-device-docs/edit/main/doc
 
 theme: readthedocs
-#  features:
-#    - navigation.sections
 
-favicon: watermeter.svg
-
+favicon: favicon.ico
 
 plugins:
     - search
-    - awesome-pages
+    - awesome-pages:
+        filename: nav.yml
 
-
-# The navigation is configured in the .pages file!
+# The navigation is configured in the nav.yml file!
