--- a/docs/nav.yml
+++ b/docs/nav.yml
@@ -7,10 +7,10 @@ nav:
 
   - Links:
     - Web Installer/Console: https://jomjol.github.io/AI-on-the-edge-device/index.html
-    - Issues: https://github.com/jomjol/AI-on-the-edge-device/issues
-    - Discussions: https://github.com/jomjol/AI-on-the-edge-device/discussions
+    - Place an Issues: https://github.com/jomjol/AI-on-the-edge-device/issues
+    - Join a Discussions: https://github.com/jomjol/AI-on-the-edge-device/discussions
 
   - Asorted Pages:
     # List all pages which are not covered by above list
-    # Step by step we should migrate those page to above list
+    # Step by step we should migrate those page to the above list
     - ...
