--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -9,9 +9,8 @@ name: Build Documentation
 
 on: 
   push:
-    branches:
-      - 'main'
-      - 'auto-gen-parameter-doc'
+#    branches:
+#      - 'main'
 
 jobs:
   build-documentation:
@@ -41,7 +40,7 @@ jobs:
       - name: Store docs in gh-pages branch
         run: |
           # Update Parameter Documentation
-          cd param-docs
+          cd generate-param-docs
           python generate-param-doc-pages.py
           python concat-parameter-pages.py
           cd ..
