--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -39,8 +39,8 @@ jobs:
       - name: Generate Parameter Page
         run: |
           cd param-docs
-          python generate-template-param-doc-pages.py # Creates a templated page for each parameter which does not yet have a page
-          tree parameter-pages
+          # Fetch the parameter pages from the main repo
+          git clone https://github.com/jomjol/AI-on-the-edge-device.git
           python concat-parameter-pages.py
         
       - name: Store Documentation in the gh-pages branch so it gets pushed to the website
