--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -7,10 +7,10 @@
 
 name: Build Documentation
 
-on: 
-  push:
-    branches:
-    - main
+#on: 
+#  push:
+#    branches:
+#    - main
 
 jobs:
   build-documentation:
