--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -7,10 +7,11 @@
 
 name: Build Documentation
 
-#on: 
-#  push:
-#    branches:
-#    - main
+on: 
+  push:
+    branches:
+    - main
+    - move-param-doc # Testing
 
 jobs:
   build-documentation:
