--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,3 +31,10 @@ markdown_extensions:
       emoji_generator: !!python/name:pymdownx.emoji.to_alt
   - markdown.extensions.admonition
   - def_list
+  - pymdownx.highlight:
+      anchor_linenums: true
+      line_spans: __span
+      pygments_lang_class: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
+  - pymdownx.superfences
