--- a/.github/ISSUE_TEMPLATE/documentation-issue.yaml
+++ b/.github/ISSUE_TEMPLATE/documentation-issue.yaml
@@ -1,7 +1,5 @@
 name: 📚 Documenation
-description: Use this form if you found an issue or have a suggestion regarding the **documentation** for the [AI on the edge device](https://github.com/jomjol/AI-on-the-edge-device) project / 
-             /
-             If you instead want to report something for the [AI on the edge device](https://github.com/jomjol/AI-on-the-edge-device) project itself, please do so at [AI on the edge device Issues](https://github.com/jomjol/AI-on-the-edge-device/issues/new/choose). /
+description: Use this form if you found an issue or have a suggestion regarding the **documentation** for the [AI on the edge device](https://github.com/jomjol/AI-on-the-edge-device) project.
 labels: doc
 body:
 
