--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,8 +1,8 @@
 blank_issues_enabled: false
 contact_links:
-  - name: GitHub Community Support
-    url: https://github.com/orgs/community/discussions
-    about: Please ask and answer questions here.
-  - name: GitHub Security Bug Bounty
-    url: https://bounty.github.com/
-    about: Please report security vulnerabilities here.
+  - name: Questions regarding the Project
+    about: Report questions regarding the firmware here. Melde Fragen mit der Firmware hier.
+    url: https://github.com/jomjol/AI-on-the-edge-device/discussions
+  - name: Firmware Issues
+    about: Report bugs regarding the firmware here. Melde Fehler mit der Firmware hier.
+    url: https://github.com/jomjol/AI-on-the-edge-device/issues
