--- a/.github/ISSUE_TEMPLATE/documentation-issue.yml
+++ b/.github/ISSUE_TEMPLATE/documentation-issue.yml
@@ -1,5 +1,6 @@
 name: 📚 Documenation
-description: Use this form if you found an issue or have a suggestion regarding the **documentation** for the [AI on the edge device](https://github.com/jomjol/AI-on-the-edge-device) project.
+description: Use this form if you found an issue or have a suggestion regarding the DOCUMENTATION for the AI on the edge device project. /
+             Verwende dieses Formular, wenn Du eine Unklarheit oder Verbesserung in der DOUMENTATION des AI on the edge device Projekts gefunden hast.
 labels: doc
 body:
 
