--- a/.github/ISSUE_TEMPLATE/documentation-issue.yml
+++ b/.github/ISSUE_TEMPLATE/documentation-issue.yml
@@ -1,4 +1,4 @@
-name: 📚 Documenation Issues/Imporvements / Probleme/Verbesserungen zur Dokumentation
+name: 📚 Documenation / Dokumentation
 description: Use this form if you have an issue/suggestion about the DOCUMENTATION for the project. Verwende dieses Formular, wenn Du eine Unklarheit/Verbesserung in der DOKUMENTATION des Projekts gefunden hast.
 labels: doc
 body:
