--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,9 @@ theme:
   palette:
     primary: blue
 
+validation:
+  links:
+    unrecognized_links: ignore # see https://www.mkdocs.org/user-guide/configuration/
 
 plugins:
   - search
